--- a/maquetacion/css/styles.css
+++ b/maquetacion/css/styles.css
@@ -20,6 +20,17 @@ body{
     background-image: url(../img/paven.png) ;
 }
 
+a{
+    color:  #529125;
+    text-decoration: none;
+}
+a:visited{
+    color:  #529125;
+}
+a:hover{
+    color:  #285616
+}
+
 /*Formularios*/
 input[type="text"],
 input[type="email"],
@@ -212,7 +223,7 @@ button:active{
 
 /*Barra lateral*/
 
-#aside {
+#aside  {
     width: 200px;   
     float: left;
     margin: 30px;
@@ -220,6 +231,20 @@ button:active{
     border: 1px solid #ccc;
     box-shadow: 0px 2px 2px #ccc;
     font-family: sans-serif,'Times New Roman', Times, serif;
+}
+
+#frase {
+    width: 180px;   
+    float: left;
+    padding: 10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 14px;
+    margin: 30px;
+    background-color: white;
+    border: 1px solid #ccc;
+    box-shadow: 0px 2px 2px #ccc;
+    font-family: sans-serif,'Times New Roman', Times, serif;
+    clear: both;
 }
 
 #aside .widget{
@@ -244,10 +269,56 @@ button:active{
     text-align: center;
     padding-top: 2px;
     padding-bottom: 2px;
+    margin-bottom: 15px;
     background: #f2f3f2; 
     border: 1px solid #ccc;
     border-left: none;
     border-right: none;
 }
 
+#aside li{
+    margin-top: 8px;
+    margin-bottom: 5px;
+    margin-left: 20px;
+    list-style-type:square;
+}
 /*Formularios barra lateral*/
+
+#aside div label,
+#aside div input[type="text"],
+#aside div input[type="email"],
+#aside div input[type="password"],
+#aside div a{
+    display: block;
+    width: 95%;
+    margin-top: 2px ;
+    margin-bottom: 2px;
+}
+
+#aside div input[type="button"],
+#aside div input[type="submit"],
+#aside div button[type="button"]{
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+#aside input,
+#aside label{
+    margin:0px auto;
+    text-align: center;
+
+}
+
+#aside #aula1{
+    color: blue;
+}
+
+#aside #aula2{
+    color: brown;
+}
+.enlace{
+    display: block;
+    margin-bottom: 2px;
+    text-align: center;
+}
+
