sections are created

--- a/maquetacion/css/styles.css
+++ b/maquetacion/css/styles.css
@@ -9,6 +9,12 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: "fajala";
+    src: url("fonts/FjallaOne-Regular.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
 /*Estilos generales */
 
 *{
@@ -29,6 +35,17 @@ a:visited{
 }
 a:hover{
     color:  #285616
+}
+
+.blue{
+    color: blue;
+}
+.red{
+    color: red;
+}
+
+.orange{
+    color: orange;
 }
 
 /*Formularios*/
@@ -244,7 +261,7 @@ button:active{
     border: 1px solid #ccc;
     box-shadow: 0px 2px 2px #ccc;
     font-family: sans-serif,'Times New Roman', Times, serif;
-    clear: both;
+    /* clear: both; */
 }
 
 #aside .widget{
@@ -322,3 +339,56 @@ button:active{
     text-align: center;
 }
 
+/*Secciones*/
+
+#sections{
+    float: right;
+    width: 75%;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-right: 20px;
+}
+
+#sections .titulo{
+    font-family: "fajala";
+    font-size: 24px;
+    font-weight: normal;
+    letter-spacing: 1px;
+    text-align: center;
+    margin-top: -20px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+#sections section{
+    margin-top: 40px;
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 4px #c9c9c9;    
+    color: #333333;
+    font-size: 16px;
+    overflow: hidden;
+}
+
+#sections .article{
+    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+#sections .date{
+    color: gray;
+    font-size: 20px ;
+}
+
+#sections .stickerOne,
+#sections .stickerTwo{
+    position:absolute;
+    margin-top: -38px;
+    z-index: 0;
+}
+
+#sections .stickerTwo{
+    margin-left: 860px;
+}
