--- a/maquetacion/css/styles.css
+++ b/maquetacion/css/styles.css
@@ -15,6 +15,18 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: "icons";
+    src: url("fonts/websymbols-regular-webfont.svg#WebSymbolsRegular")format('svg'),
+         url("fonts/websymbols-regular-webfont.eot")   ;
+    src: url("fonts/websymbols-regular-webfont.eot?#iefix") format("embedded-opentype"),
+         url("fonts/websymbols-regular-webfont.woff") format("woff"),
+         url("fonts/websymbols-regular-webfont.ttf") format("truetype"),
+         url("fonts/nevis.svg") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
 /*Estilos generales */
 
 *{
@@ -48,6 +60,13 @@ a:hover{
     color: orange;
 }
 
+.icon{
+    font-family: icons;
+    float: left;
+    margin-right: 5px;
+    margin-top: -2px;
+
+}
 /*Formularios*/
 input[type="text"],
 input[type="email"],
