--- a/maquetacion/css/styles.css
+++ b/maquetacion/css/styles.css
@@ -65,7 +65,11 @@ a:hover{
     float: left;
     margin-right: 5px;
     margin-top: -2px;
+}
 
+.clearfix{
+    float: none;
+    clear: both;
 }
 /*Formularios*/
 input[type="text"],
@@ -410,4 +414,25 @@ button:active{
 
 #sections .stickerTwo{
     margin-left: 860px;
+}
+
+#history{
+    float: right;
+    margin-top: 20px;
+}
+
+/*Pie de pagina*/
+
+#footer{
+    width: 100%;
+    margin: 0px auto;
+    text-align: center;
+    margin-top: 40px;
+    background-color: #333333;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+    font-family: sans-serif;
+    font-size: 14px;
+    box-shadow: 0px 0px 2px gray;    
 }
