--- a/maquetacion-2/css/styles.css
+++ b/maquetacion-2/css/styles.css
@@ -72,12 +72,52 @@ body{
     transition: all 300ms;
 }
 
+#logo:hover{
+    border-radius: 2px;
+    color: black;
+    background-color: #ccc;
+}
+
 #logo .gear{
     display: block;
     float: left;
     font-size: 30px;
     margin-top:  8px;
     margin-left: 26px;
+    /*Animaciones*/
+    animation-name: rotate-gear;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+/* Keyframes para animaciones*/
+
+@keyframes rotate-gear{
+    from{
+        transform: rotateZ(0deg);
+    }
+    to{
+        transform: rotateZ(360deg);
+    }
+
+}
+
+#logo:hover .gear{
+   animation: fromBellow 500ms linear;
+}
+
+@keyframes fromBellow{
+    0%{
+        transform: translateY(0%);
+    }
+    50%{
+        transform: translateY(180%);
+    }
+    100%{
+        transform: translateY(0%)
+        
+    }
 }
 
 #logo h3{
@@ -88,6 +128,19 @@ body{
     margin-right: 55px;
     transition: all 300ms; 
 }
+
+#logo:hover h3{
+    animation: fromRight 300ms linear;
+ }
+
+ @keyframes fromRight{
+    from{
+        transform:translateX(200%) ;
+    }
+    to{
+        transform: translateX(0%);
+    }
+ }
  #menu{
      float: right;
      height: 70px;
@@ -126,8 +179,18 @@ body{
     background-position: -200px -200px;
     margin: 20px auto;
     color: white;
+    overflow: hidden;
+    animation: backBanner 10s linear;
  }
 
+ @keyframes backBanner{
+    0%{
+        background-position: 0px 0px ;
+    }
+    100%{
+        background-position: -200px -200px;
+    }
+ }
  #banner h1{
     display: block;
     width: 850px;
@@ -137,7 +200,31 @@ body{
     letter-spacing: 2px;
     text-shadow: 2px 2px 1px black;
     margin: 27px auto ;
+    animation: showText 10s linear;
  }
+
+@keyframes showText{
+    0%{
+        transform: translateX(-600%) scale(5,5);
+        opacity: 1;
+    }
+    50%{
+        transform: translateX(600%) scale(5,5);
+        opacity: 1;
+    }
+    75%{
+        transform: translateX(-600%) scale(5,5);
+        text-shadow: none;
+        color: transparent;
+        opacity: 0;
+    }
+    100%{
+        transform: translateX(0%) scale(1,1);
+        text-shadow: 2px 2px 1px black;
+        color: white;
+        opacity: 1;
+    }
+}
 
  /*Tarjetas*/
 
@@ -152,6 +239,11 @@ body{
     margin: 22px;
     margin-top: 40px;
     cursor: pointer;
+    transition: all 300ms;
+ }
+
+ .card:hover{
+    background: black;
  }
 
  .card:last-child{
@@ -166,6 +258,22 @@ body{
     line-height: 130px;
     text-align: center;
     margin: 0px auto;
+    transition: all 300ms;
+ }
+
+ .card:hover .icon{
+    font-size: 70px;
+    color: #37bcf9;
+    animation: showIcon 300ms linear;
+ }
+
+ @keyframes showIcon{
+    from{
+        transform: translateY(-200%);
+    }
+    to{
+        transform: translateY(0%);
+    }
  }
 
  .card .category{
@@ -176,15 +284,46 @@ body{
     font-weight: bold;
     text-align: center;
     color: #00538c;
+    transition: all 300ms;
  }
 
+ .card:hover .category{
+    color:white;
+    animation: showCategory 400ms linear;
+ }
+
+ @keyframes showCategory{
+    from{
+        transform: translateY(-300%);
+        color: black;
+    }
+    to{
+        transform: translateY(0%);
+        color: white;
+    }
+ }
  .card .description{
     text-align: center;
     color: #015d9a;
     font-family: 'Trebuchet MS';
     font-size: 15px;
+    transition: all 300ms;
+ }
+ .card:hover .description{
+    color: white;
+    animation: showDescription 400ms linear;
  }
 
+ @keyframes showDescription{
+    from{
+        transform: translateX(-300%);
+        color: black;
+    }
+    to{
+        transform: translateX(0%);
+        
+    }
+ }
  /*Barra lateral*/
 
  #lateral{
@@ -360,6 +499,29 @@ transition: all 300ms;
     margin-bottom: 20px;
 }
 
+#social .overlay{
+    display: block;
+    height: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-shadow: 0px 0px 1px #ccc;
+    border: 3px solid white;
+    box-shadow: 0px 0px 4px #ccc;
+    background: #f4f7fe;
+    position: absolute;
+    padding: 5px;
+    margin-left: 70px;
+    margin-top: -52px;
+    transform: translateX(-80%);
+    opacity: 0;
+    transition: all 400ms;
+}
+
+#social div:hover .overlay{
+    opacity: 1;
+    transform: translateX(0%);
+}
 /*Articulos*/
 
 #articles{
@@ -438,6 +600,7 @@ transition: all 300ms;
     margin-top: 60px;
     line-height: 100px;
     text-align: center;
+    transition: all 1s;
 }
 
 #blog a{
@@ -449,7 +612,41 @@ transition: all 300ms;
     letter-spacing: 3px;
     color: #00538c;
     text-decoration: none;
+    transition: all 1s;
 }
+
+#blog:hover{
+    background-color: #555;
+    border: 10px solid #37bcf9;
+    border-radius: 240px;
+    box-shadow: 0px 0px 10px gray;
+    animation: blink 8s infinite linear;
+}
+
+#blog:hover a{
+    color: white;
+    text-shadow: 1px 1px 1px black, 1px 2px 1px black, 1px 3px 1px black,1px 4px 1px black, 1px 5px 1px black, 1px 6px 1px black;
+
+}
+
+@keyframes blink{
+    0%{
+        border:10px solid #37bcf9;
+    }
+    25%{
+        border:10px solid yellow;
+    }
+    50%{
+        border:10px solid whitesmoke;
+    }
+    75%{
+        border:10px solid green;
+    }
+    100%{
+        border:10px solid firebrick;
+    }
+}
+
 
 /*Footer*/
 
@@ -507,6 +704,13 @@ transition: all 300ms;
 #footer ul li a{
     display: block;
     height: 40px;
+    transition: all 300ms;
+}
+
+#footer ul li:hover a{
+    padding-left: 40px;
+    color: white;
+    
 }
 
 #footer iframe{
